plang/testing/logs/false-incorrect/171/program171.p.p
w.

mwDf.
cXNnG c vw xx iUM7u.


u (EJn) mQ IbDsv.
cylg RoNDr yO8L i2l :- j (jrFX) pG (X) Y, (fjYTQ); (xtz nO (YcW)); (xF VeyTF (xUhOv t3 M3eBP) fO91); kW DyaC1 e (AyD) Nlbc.

ffj (TjRT) :- mZVzr (gQgU) j5o.


a4UBj (m) tHA (tisy) (Wu).
hl0 npa4 (VLwn) yp P3zD :- u4d (Nxn).

? (xytJ D).


